# ragas-golden-dataset-pipeline

./: .env-example  .gitignore  README.md  README_retriever.md  extract_all_code.py  pipeline.py  prefect-evaluation.py  prefect_docloader_pipeline.py  prefect_evaluation_pipeline.py  prefect_evaluation_pipeline_architecture.md  prefect_pipeline.py  prefect_pipeline_v2.py  proto-ds.py  pyproject.toml  requirements.txt  run.py
docs/: CONFIGURATION.md  CURSOR-IMPL-GUIDE.md  PIPELINES.md  SAMPLE-PDF-DOWNLOAD.md  VISUALIZATION.md  api-endpoint-migration-plan.md  emerging-trends-2025.md  kg-tools.md  prefect-docloader-getting-started-lite.md  prefect-docloader-getting-started-v2.md  prefect-evals-pipeline-best-practices.md  prefect-evals-pipeline-caching.md  prefect-evals-reusable-task-libraries.md  ragas-global-eval-config.md  retrieval-advanced_concepts.md  retrieval-concepts.md  retrieval-evals-cheatsheet.md  retrieval-readme.md
evaluation_results/: bm25_results_20250521_151530.json  bm25_results_20250521_151535.json  bm25_results_20250521_151540.json  bm25_results_20250521_152145.json  bm25_results_20250521_153134.json  bm25_results_20250521_153908.json  bm25_results_20250521_153925.json  bm25_results_20250521_153951.json  bm25_results_20250521_154431.json  bm25_results_20250521_154616.json  bm25_results_20250521_185549.json  bm25_results_20250521_185822.json  bm25_results_20250521_190228.json  bm25_results_20250521_194604.json  bm25_results_20250521_200611.json  bm25_results_20250521_200743.json  comparison-20250521-154045.csv  comparison-20250521-190546.csv  (+36 more)
(+45 files in other folders)
